# pal-tester

./: .gitignore
software/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.rc
